--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- nav start -->
     <nav>
         <div class="nav-1">
-            <img src="../lana/image/logo1.png">
+            <img src="image/logo1.png">
             <h2> Lana </h2>
         </div>
         <div class="nav-2">
@@ -47,9 +47,9 @@
             <button class="bt-text"> Read More </button>
         </div>
         <div class="img-content">
-            <img class="sofa" src="../lana/image/sofa.jpg">
-            <img class="kursi" src="../lana/image/meja.png">
-            <img class="sofa" src="../lana/image/sofa.jpg">
+            <img class="sofa" src="image/sofa.jpg">
+            <img class="kursi" src="image/meja.png">
+            <img class="sofa" src="image/sofa.jpg">
         </div>
     </article>
 
